--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ cycler==0.11.0
 debugpy==1.6.4
 decorator==5.1.1
 entrypoints==0.4
+et-xmlfile==1.1.0
 executing==1.2.0
 Faker==15.3.4
 fonttools==4.38.0
+greenlet==2.0.1
 ipykernel==6.19.4
 ipython==8.8.0
 jedi==0.18.2
@@ -20,6 +22,7 @@ matplotlib==3.6.3
 matplotlib-inline==0.1.6
 nest-asyncio==1.5.6
 numpy==1.24.1
+openpyxl==3.0.10
 packaging==22.0
 pandas==1.5.2
 parso==0.8.3
@@ -28,6 +31,7 @@ Pillow==9.4.0
 platformdirs==2.6.2
 prompt-toolkit==3.0.36
 psutil==5.9.4
+psycopg2==2.9.5
 pure-eval==0.2.2
 Pygments==2.14.0
 pyparsing==3.0.9
@@ -36,7 +40,10 @@ pytz==2022.7
 pywin32==305
 pyzmq==24.0.1
 six==1.16.0
+SQLAlchemy==1.4.46
 stack-data==0.6.2
 tornado==6.2
 traitlets==5.8.0
 wcwidth==0.2.5
+xlrd==2.0.1
+xlwt==1.3.0
